[workspace]
members = ["plumber_core", "plumber_vdf", "plumber_vpk", "plumber_cli", "plumber_uncased"]

[patch.crates-io]
serde = { git = "https://github.com/lasa01/serde", branch = "case-insensitive-attr" }
serde_derive = { git = "https://github.com/lasa01/serde", branch = "case-insensitive-attr" }
