[package]
name = "plumber_asset_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plumber_fs = { version = "0.1.0", path = "../plumber_fs" }
rayon = "1.7.0"
crossbeam-utils = "0.8.14"
log = "0.4.14"
