[package]
name = "plumber_asset_vmt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plumber_asset_core = { version = "0.1.0", path = "../plumber_asset_core" }
plumber_asset_vtf = { version = "0.1.0", path = "../plumber_asset_vtf" }
plumber_vmt = { version = "0.1.0", path = "../plumber_vmt" }
plumber_vdf = { version = "0.1.0", path = "../plumber_vdf" }
plumber_fs = { version = "0.1.0", path = "../plumber_fs" }
plumber_uncased = { version = "0.1.0", path = "../plumber_uncased" }
thiserror = "1.0.24"
image = { version = "0.24.1", default-features = false }
itertools = "0.10.0"
zerocopy = { version = "0.6.1" }
half = { version = "2.1.0", features = ["zerocopy"] }
vtflib2 = { git = "https://github.com/lasa01/vtflib2-rs", rev = "312abad26233a1a7310bfd50ebf8f2491f88f60f", features = [
    "static",
] }
