[package]
name = "plumber_asset_vmt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plumber_asset_core = { version = "0.1.0", path = "../plumber_asset_core" }
plumber_asset_vtf = { version = "0.1.0", path = "../plumber_asset_vtf" }
plumber_vmt = { version = "0.1.0", path = "../plumber_vmt" }
plumber_vdf = { version = "0.1.0", path = "../plumber_vdf" }
plumber_fs = { version = "0.1.0", path = "../plumber_fs" }
plumber_uncased = { version = "0.1.0", path = "../plumber_uncased" }
thiserror = "1.0.24"
image = { version = "0.24.1", default-features = false }
itertools = "0.10.0"
zerocopy = { version = "0.8.52" }
half = { version = "2.7.1", features = ["zerocopy"] }
vtflib2 = { git = "https://github.com/lasa01/vtflib2-rs", rev = "683e7fffe7fd011fb8ce08ed48e2e88573e0743e", features = [
    "static",
] }
