[package]
name = "plumber_core"
description = "Everything you need to work with Valve's Source Engine files"
version = "0.1.0"
repository = "https://github.com/lasa01/plumber_core"
readme = "README.md"
keywords = ["valve", "source", "vdf", "vmf", "vmt"]
categories = ["parser-implementations"]
authors = ["Lassi Säike"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plumber_vdf = { version = "0.1.0", path = "../plumber_vdf" }
plumber_vpk = { version = "0.1.0", path = "../plumber_vpk", features = ["serde"] }
plumber_uncased = { version = "0.1.0", path = "../plumber_uncased" }
approx = "0.5.0"
itertools = "0.10.0"
ndarray = "0.15.1"
rgb = "0.8.27"
serde = { version = "= 1.0.125", features = ["derive"] }
serde_derive = "= 1.0.125"
thiserror = "1.0.24"
vtflib = { version = "0.2.1", features = ["static"] }
image = { version = "0.24.1", default-features = false }
nom = "7.1.0"
rayon = "1.5.1"
crossbeam-channel = "0.5.1"
crossbeam-utils = "0.8.5"
zerocopy = { version = "0.6.1" }
byteorder = { version = "1.4.3" }
maligned = { version = "0.2.1" }
bitflags = { version = "1.2.1" }
glam = { version = "0.20.2", features = ["approx"] }
log = "0.4.14"
half = { version = "2.1.0", features = ["zerocopy"] }

[target.'cfg(windows)'.dependencies]
winreg = { version = "0.8" }

[target.'cfg(not(windows))'.dependencies]
home = { version = "0.5.3" }

[dev-dependencies]
glam = { version = "0.20.2", features = ["serde"] }
serde_json = "1.0.79"
walkdir = "2.3.2"
