[package]
name = "plumber_core"
description = "For creating Source Engine importers for 3D software such as Blender"
version = "0.1.0"
repository = "https://github.com/lasa01/plumber_core"
readme = "README.md"
keywords = ["valve", "source", "vdf", "vmf", "vmt"]
authors = ["Lassi Säike"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plumber_vdf = { version = "0.1.0", path = "../plumber_vdf" }
plumber_vpk = { version = "0.1.0", path = "../plumber_vpk", features = ["serde"] }
plumber_uncased = { version = "0.1.0", path = "../plumber_uncased" }
plumber_mdl = { version = "0.1.0", path = "../plumber_mdl" }
plumber_steam = { version = "0.1.0", path = "../plumber_steam" }
plumber_fs = { version = "0.1.0", path = "../plumber_fs" }
plumber_vmt = { version = "0.1.0", path = "../plumber_vmt" }
plumber_vmf = { version = "0.1.0", path = "../plumber_vmf" }
plumber_asset_core = { version = "0.1.0", path = "../plumber_asset_core" }
plumber_asset_mdl = { version = "0.1.0", path = "../plumber_asset_mdl" }
plumber_asset_vmf = { version = "0.1.0", path = "../plumber_asset_vmf" }
plumber_asset_vmt = { version = "0.1.0", path = "../plumber_asset_vmt" }
plumber_asset_vtf = { version = "0.1.0", path = "../plumber_asset_vtf" }
