[package]
name = "plumber_fs"
description = "Valve's Source Engine game filesystem library"
version = "0.1.0"
repository = "https://github.com/lasa01/plumber_core"
readme = "README.md"
keywords = ["valve", "source"]
authors = ["Lassi Säike"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
plumber_vdf = { version = "0.1.0", path = "../plumber_vdf" }
plumber_vpk = { version = "0.1.0", path = "../plumber_vpk", features = [
    "serde",
] }
plumber_uncased = { version = "0.1.0", path = "../plumber_uncased" }
plumber_steam = { version = "0.1.0", path = "../plumber_steam" }
serde = { version = "= 1.0.125", features = ["derive"] }
serde_derive = "= 1.0.125"
thiserror = "1.0.24"
tracing = "0.1.37"
