[package]
name = "plumber_mdl"
description = "Valve's Source Engine model parser"
version = "0.1.0"
repository = "https://github.com/lasa01/plumber_core"
readme = "README.md"
keywords = ["valve", "source", "mdl"]
authors = ["Lassi Säike"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
plumber_fs = { version = "0.1.0", path = "../plumber_fs" }
approx = "0.5.0"
itertools = "0.10.0"
thiserror = "1.0.24"
zerocopy = { version = "0.6.1" }
byteorder = { version = "1.4.3" }
maligned = { version = "0.2.1" }
bitflags = { version = "1.2.1" }
glam = { version = "0.20.2", features = ["approx"] }
log = "0.4.14"
half = { version = "2.1.0", features = ["zerocopy"] }

[dev-dependencies]
plumber_steam = { version = "0.1.0", path = "../plumber_steam" }
plumber_test_utils = { version = "0.1.0", path = "../plumber_test_utils" }
serde = { version = "= 1.0.125", features = ["derive"] }
serde_derive = "= 1.0.125"
glam = { version = "0.20.2", features = ["serde"] }
