[package]
name = "plumber_vmt"
description = "VMT deserialization library."
version = "0.1.0"
repository = "https://github.com/lasa01/plumber_core"
readme = "README.md"
keywords = ["valve", "source"]
authors = ["Lassi Säike"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
plumber_vdf = { version = "0.1.0", path = "../plumber_vdf" }
plumber_fs = { version = "0.1.0", path = "../plumber_fs" }
plumber_uncased = { version = "0.1.0", path = "../plumber_uncased" }
serde = { version = "= 1.0.125", features = ["derive"] }
serde_derive = "= 1.0.125"
tracing = "0.1.37"
nom = "7.1.0"
rgb = "0.8.27"
thiserror = "1.0.24"
glam = { version = "0.20.2" }

[dev-dependencies]
plumber_steam = { version = "0.1.0", path = "../plumber_steam" }
